# powerful_ocr

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  backend.py  cache_cli.py  cache_manager.py  docker-compose.yml  file_splitter.py  format_processor.py  gui_main.py  image_preprocessor.py  launcher.py  main.py  pyproject.toml  retry_manager.py
.github/workflows/: docker-build.yml
nginx/: nginx.conf
terminology/: 人物.txt
web/: app.js  app_v2.js  index.html  index_v2.html  style.css  style_v2.css
