[project]
name = "mistal-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alibabacloud-ocr-api20210707>=3.1.3",
    "fastapi>=0.104.0",
    "google-generativeai>=0.8.5",
    "mistralai>=1.9.2",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "openai>=1.97.0",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "pypdf>=5.8.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.6",
    "requests>=2.32.4",
    "tqdm>=4.67.1",
    "uvicorn>=0.24.0",
]
